--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio de Sophie Van Hese avec langages informatiques: JavaScript, jQuery, React js, PHP mais aussi du graphisme, du webdesign, du motion design."
+      content="Le portfolio renferme mes créations graphiques, mes réalisations de sites web et les outils que j'utilise le plus. Découvrez mes propositions et ma créativité."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
